--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -25,4 +25,5 @@
     <div class="valid-feedback">Looks good!</div>
   </div>
   <button class="btn btn-success">Login</button>
+  <a href="/register" class="btn btn-primary">Register</a>
 </form>
