--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
-<h1>Login</h1>
-<form action="/login" method="POST" class="validated-form" novalidate>
+<h1>Register User</h1>
+<form action="/register" method="POST" class="validated-form" novalidate>
   <div class="mb-3">
     <label class="form-label" for="username">Username</label>
     <input
@@ -10,6 +10,12 @@
       name="username"
       required
     />
+    <div class="valid-feedback">Looks good!</div>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label" for="email">Email</label>
+    <input class="form-control" type="email" id="email" name="email" required />
     <div class="valid-feedback">Looks good!</div>
   </div>
 
@@ -24,5 +30,5 @@
     />
     <div class="valid-feedback">Looks good!</div>
   </div>
-  <button class="btn btn-success">Login</button>
+  <button class="btn btn-success">Submit</button>
 </form>
