--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,32 +1,23 @@
 <nav class="navbar sticky-top navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand text-light" href="#">Yelpcamp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active text-light" href="/">Home</a>
         <a class="nav-link text-light" href="/campgrounds">Campgrounds</a>
-        <a class="nav-link text-light" href="/campgrounds/new"
-          >New Campgrounds</a
-        >
+        <a class="nav-link text-light" href="/campgrounds/new">New Campgrounds</a>
       </div>
       <div class="navbar-nav ms-auto">
         <% if(!currentUser){ %>
-        <a href="/login" class="nav-link text-light">Login</a>
-        <a href="/register" class="nav-link text-light">Register</a>
-        <% }else{ %>
-        <a href="/logout" class="nav-link text-light">Logout</a>
-        <% } %>
+          <a href="/login" class="nav-link text-light">Login</a>
+          <a href="/register" class="nav-link text-light">Register</a>
+          <% }else{ %>
+            <a href="/logout" class="nav-link text-light">Logout</a>
+            <% } %>
       </div>
     </div>
   </div>
