--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,56 +1,74 @@
 <% layout("layouts/boilerplate") %>
-<link rel="stylesheet" href="/css/stars.css" />
+  <link rel="stylesheet" href="/css/stars.css" />
 
-<div class="row">
-  <div class="col-6">
-    <div class="card mb-3">
-      <img src="<%= campground.image%>" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title"><%= campground.title%></h5>
-        <p class="card-text"><%= campground.description%></p>
+  <div class="row">
+    <div class="col-6">
+      <div class="card mb-3">
+
+        <!-- carousel image display -->
+        <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <% campground.images.forEach((img,i) => { %>
+              
+            <div class="carousel-item <%= i===0?'active':''%>">
+              <img crossorigin="anonymous" src="<%= img.url%>" class="d-block w-100" alt="...">
+            </div>
+            <% }); %>
+          </div>
+          <% if(campground.images.length>1){ %>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <% } %>
+        </div>
+        
+          
+         
+        
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= campground.title%>
+          </h5>
+          <p class="card-text">
+            <%= campground.description%>
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item text-muted">
+            <%= campground.location%>
+          </li>
+          <li class="list-group-item">
+            Submitted by <%= campground.author.username%>
+          </li>
+          <li class="list-group-item">Rs.<%= campground.price%>/night</li>
+        </ul>
+        <% if(currentUser && campground.author.equals(currentUser._id)) {%>
+          <div class="card-body">
+            <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+            <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+          <% } %>
+            <div class="card-footer text-muted">2 days ago</div>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item text-muted"><%= campground.location%></li>
-        <li class="list-group-item">
-          Submitted by <%= campground.author.username%>
-        </li>
-        <li class="list-group-item">Rs.<%= campground.price%>/night</li>
-      </ul>
-      <% if(currentUser && campground.author.equals(currentUser._id)) {%>
-      <div class="card-body">
-        <a
-          class="card-link btn btn-info"
-          href="/campgrounds/<%=campground._id%>/edit"
-          >Edit</a
-        >
-        <form
-          class="d-inline"
-          action="/campgrounds/<%=campground._id%>?_method=DELETE"
-          method="POST"
-        >
-          <button class="btn btn-danger">Delete</button>
-        </form>
-      </div>
-      <% } %>
-      <div class="card-footer text-muted">2 days ago</div>
     </div>
-  </div>
 
-  <!-- review portion -->
-  <div class="col-6">
-    <% if(currentUser){ %>
-    <h2>Leave a Review</h2>
-    <form
-      action="/campgrounds/<%=campground._id %>/reviews"
-      novalidation
-      class="validated-from"
-      method="POST"
-    >
-      <div class="mb-3">
-        <!-- star review -->
-        <div class="mb-3">
-          <!-- old radio button review -->
-          <!-- <label for="customRange1" class="form-label" required>Rating</label>
+    <!-- review portion -->
+    <div class="col-6">
+      <% if(currentUser){ %>
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%=campground._id %>/reviews" novalidation class="validated-from" method="POST">
+          <div class="mb-3">
+            <!-- star review -->
+            <div class="mb-3">
+              <!-- old radio button review -->
+              <!-- <label for="customRange1" class="form-label" required>Rating</label>
           <input
             type="range"
             class="form-range"
@@ -59,92 +77,55 @@
             id="customRange1"
             name="review[rating]"
           /> -->
-          <fieldset class="starability-basic">
-            <legend>Rating</legend>
-            <input
-              type="radio"
-              id="no-rate"
-              class="input-no-rate"
-              name="review[rating]"
-              value="1"
-              checked
-              aria-label="No rating."
-            />
-            <input
-              type="radio"
-              id="first-rate1"
-              name="review[rating]"
-              value="1"
-            />
-            <label for="first-rate1" title="Terrible">1 star</label>
-            <input
-              type="radio"
-              id="first-rate2"
-              name="review[rating]"
-              value="2"
-            />
-            <label for="first-rate2" title="Not good">2 stars</label>
-            <input
-              type="radio"
-              id="first-rate3"
-              name="review[rating]"
-              value="3"
-            />
-            <label for="first-rate3" title="Average">3 stars</label>
-            <input
-              type="radio"
-              id="first-rate4"
-              name="review[rating]"
-              value="4"
-            />
-            <label for="first-rate4" title="Very good">4 stars</label>
-            <input
-              type="radio"
-              id="first-rate5"
-              name="review[rating]"
-              value="5"
-            />
-            <label for="first-rate5" title="Amazing">5 stars</label>
-          </fieldset>
-        </div>
-        <!-- review text -->
-        <div class="mb-3">
-          <label class="form-label" for="body">Review Text</label>
-          <textarea
-            class="form-control"
-            type="text"
-            id="description"
-            name="review[body]"
-            required
-          ></textarea>
-        </div>
+              <fieldset class="starability-basic">
+                <legend>Rating</legend>
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                  aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
+            </div>
+            <!-- review text -->
+            <div class="mb-3">
+              <label class="form-label" for="body">Review Text</label>
+              <textarea class="form-control" type="text" id="description" name="review[body]" required></textarea>
+            </div>
 
-        <button class="btn btn-outline-success">send</button>
-      </div>
-    </form>
-    <% } %> <% for(let rev of campground.review) { %>
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title"><%= rev.author.username %></h5>
-        <!-- <h5 class="card-title">Rating: <%= rev.rating %></h5> -->
-        <!-- <h3>Rated element name</h3> -->
-        <p class="starability-result" data-rating="<%= rev.rating %>">
-          Rated: <%= rev.rating %> stars
-        </p>
-        <!-- <h6 class="card-subtitle mb-2 text-body-secondary">
-          By 
-        </h6> -->
-        <p class="card-text">Review: <%= rev.body %></p>
-        <% if(currentUser && rev.author.equals(currentUser._id)){ %>
-        <form
-          action="/campgrounds/<%=campground._id%>/reviews/<%=rev._id%>?_method=DELETE"
-          method="POST"
-        >
-          <button class="btn btn-sm btn-danger">Delete</button>
+            <button class="btn btn-outline-success">send</button>
+          </div>
         </form>
         <% } %>
-      </div>
+          <% for(let rev of campground.review) { %>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= rev.author.username %>
+                </h5>
+                <!-- <h5 class="card-title">Rating: <%= rev.rating %></h5> -->
+                <!-- <h3>Rated element name</h3> -->
+                <p class="starability-result" data-rating="<%= rev.rating %>">
+                  Rated: <%= rev.rating %> stars
+                </p>
+                <!-- <h6 class="card-subtitle mb-2 text-body-secondary">
+          By 
+        </h6> -->
+                <p class="card-text">Review: <%= rev.body %>
+                </p>
+                <% if(currentUser && rev.author.equals(currentUser._id)){ %>
+                  <form action="/campgrounds/<%=campground._id%>/reviews/<%=rev._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                  </form>
+                  <% } %>
+              </div>
+            </div>
+            <% } %>
     </div>
-    <% } %>
   </div>
-</div>
