--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-dark">
+<nav class="navbar navbar-dark sticky-top navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand text-light" href="#">Yelpcamp</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
